--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "vis-timeline": "6.2.10"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.11.0",
+    "@typescript-eslint/parser": "^2.11.0",
+    "eslint": "^6.7.2",
     "parcel-bundler": "^1.6.1",
     "typescript": "^3.7.3"
   },
