--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
   },
   "dependencies": {
     "@types/lodash": "^4.14.149",
+    "bootstrap": "^4.4.1",
+    "jquery": "^3.4.1",
     "lodash": "^4.17.15",
+    "popper.js": "^1.16.0",
     "rxjs": "^6.5.3",
     "vis-network": "6.4.6",
     "vis-timeline": "6.2.10"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.12.0",
     "@typescript-eslint/eslint-plugin": "^2.11.0",
     "@typescript-eslint/parser": "^2.11.0",
     "eslint": "^6.7.2",
-    "parcel-bundler": "^1.6.1",
+    "parcel-bundler": "^1.12.4",
     "typescript": "^3.7.3"
   },
   "keywords": []
