--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "parcel build index.html"
   },
   "dependencies": {
+    "@types/jquery": "^3.3.31",
     "@types/lodash": "^4.14.149",
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
