working controls and fixed propdup

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,12 +4,11 @@
     "jsx": "preserve",
     "esModuleInterop": true,
     "sourceMap": true,
+    "resolveJsonModule": true,
     "allowJs": true,
-    "lib": [
-      "es6",
-      "dom"
-    ],
+    "lib": ["es6", "dom"],
     "rootDir": "src",
     "moduleResolution": "node"
   }
 }
+
