fix following updates publish not on first node but on random one exclude node_modules from tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,12 @@
     "lib": ["es6", "dom"],
     "rootDir": "src",
     "moduleResolution": "node"
-  }
+  },
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
 
