--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "sourceMap": true,
     "resolveJsonModule": true,
     "allowJs": true,
-    "target": "esnext",
+    "target": "ES2020",
     "lib": ["es6", "dom"],
     "rootDir": "src",
     "moduleResolution": "node"
