--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,8 @@
     "sourceMap": true,
     "resolveJsonModule": true,
     "allowJs": true,
-    "target": "ES2020",
-    "lib": ["es6", "dom"],
+    "target": "esnext",
+    "lib": ["esnext", "dom"],
     "rootDir": "src",
     "moduleResolution": "node"
   },
