--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.html",
   "scripts": {
     "start": "parcel index.html --open",
+    "simulate-whole" : "ts-node ./src/simulator/simulator-runner.ts",
     "simulate": "ts-node ./src/simulator/simulator.ts",
+    "simulate-default": "ts-node ./src/simulator/simulator.ts --in=./src/probdup/nodeEdge1000.json",
     "simulate-1000": "ts-node ./src/simulator/simulator.ts --in=./src/probdup/nodeEdge1000.json --iterations=1000 --all",
     "build": "parcel build index.html",
     "deploy": "npm run build && npx gh-pages -m 'Updates' -d dist"
@@ -30,9 +32,11 @@
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.13.0",
+    "@types/concurrently": "^5.2.1",
     "@types/yargs": "^15.0.5",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
     "@typescript-eslint/parser": "^2.34.0",
+    "concurrently": "^5.3.0",
     "eslint": "^6.8.0",
     "gh-pages": "^3.0.0",
     "parcel-bundler": "^1.12.4",
