--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "simulate": "ts-node ./src/simulator/simulator.ts",
     "simulate-default": "ts-node ./src/simulator/simulator.ts --in=./src/probdup/nodeEdge1000.json",
     "simulate-1000": "ts-node ./src/simulator/simulator.ts --in=./src/probdup/nodeEdge1000.json --iterations=1000 --all",
+    "findDefensiveAlliances": "ts-node ./src/simulator/simulator.ts --in=./defensiveAllianceB.json --iterations=0 --findDefensiveAlliances",
     "build": "parcel build index.html",
     "deploy": "npm run build && npx gh-pages -m 'Updates' -d dist"
   },
