--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
   "main": "index.html",
   "scripts": {
     "start": "parcel index.html --open",
-    "simulate-whole" : "ts-node ./src/simulator/simulator-runner.ts",
+    "preview": "parcel preview.html --open",
+    "simulate-whole": "ts-node ./src/simulator/simulator-runner.ts",
     "simulate": "ts-node ./src/simulator/simulator.ts",
     "simulate-default": "ts-node ./src/simulator/simulator.ts --in=./src/probdup/nodeEdge1000.json",
     "simulate-1000": "ts-node ./src/simulator/simulator.ts --in=./src/probdup/nodeEdge1000.json --iterations=1000 --all",
-    "findDefensiveAlliances": "ts-node ./src/simulator/simulator.ts --in=./defensiveAllianceB.json --iterations=0 --findDefensiveAlliances",
+    "findDefensiveAlliancesInExample": "ts-node ./src/simulator/simulator.ts --in=./defensiveAllianceB.json --iterations=0 --findDefensiveAlliances",
+    "findDefensiveAlliances": "ts-node ./src/simulator/simulator.ts --nodes=10000 --iterations=0 --findDefensiveAlliances",
     "build": "parcel build index.html",
     "deploy": "npm run build && npx gh-pages -m 'Updates' -d dist"
   },
   "dependencies": {
+    "@seregpie/bron-kerbosch": "^1.0.0",
     "@types/chart.js": "^2.9.22",
     "@types/jquery": "^3.3.38",
     "@types/lodash": "^4.14.154",
