--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "start": "parcel index.html --open",
     "preview": "parcel preview.html --open",
     "simulate-whole": "ts-node ./src/simulator/simulator-runner.ts",
+    "defensive-simulate-runner": "ts-node ./src/simulator/defensive-simulator-runner.ts",
     "simulate": "ts-node ./src/simulator/simulator.ts",
     "simulate-default": "ts-node ./src/simulator/simulator.ts --in=./src/probdup/nodeEdge1000.json",
     "simulate-1000": "ts-node ./src/simulator/simulator.ts --in=./src/probdup/nodeEdge1000.json --iterations=1000 --all",
     "findDefensiveAlliancesInExample": "ts-node ./src/simulator/simulator.ts --in=./defensiveAllianceB.json --iterations=0 --findDefensiveAlliances",
-    "findDefensiveAlliances": "ts-node ./src/simulator/simulator.ts --nodes=10000 --iterations=0 --findDefensiveAlliances",
+    "findDefensiveAlliances": "ts-node ./src/simulator/simulator.ts --nodes=1000 --iterations=0 --findDefensiveAlliances",
     "build": "parcel build index.html",
     "deploy": "npm run build && npx gh-pages -m 'Updates' -d dist"
   },
